fix typo and add meta tags

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
   %a.navbar-brand{ href: '#' } NJMJ
   %form.form-inline.my-2.my-lg-0
     %button.btn.btn-outline-success.my-2.my-sm-0{ type: 'submit' } ゲームを開始
-  %button.navbar-toggler{ type: 'button', data:{ toggle: 'collapse', target: '#navbarSupportedContent' }, aria: { control: 'navbarSupportedContent', expanded: 'false', label: 'Toggle navigation' } }
+  %button.navbar-toggler{ type: 'button', data:{ toggle: 'collapse', target: '#navbarSupportedContent' }, aria: { controls: 'navbarSupportedContent', expanded: 'false', label: 'Toggle navigation' } }
     %span.navbar-toggler-icon
 
   #navbarSupportedContent.collapse.navbar-collapse
@@ -22,7 +22,7 @@
           %a.dropdown-item{ href: '#' } Another action
           %a.dropdown-item{ href: '#' } Something else here
     %form.form-inline.my-2.my-lg-0
-      %input.form-control.mr-sm-2{ type: 'text', placefolder: 'Search', aria: { label: 'Search' } }
+      %input.form-control.mr-sm-2{ type: 'text', placeholder: 'Search', aria: { label: 'Search' } }
       %button.btn.btn-outline-success.my-2.my-sm-0{ type: 'submit' } Search
 
 %main.container{ role: 'main' }
