--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,8 @@
 %nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
   %a.navbar-brand{ href: '#' } NJMJ
-  %form.form-inline.my-2.my-lg-0
+  = form_tag players_path, method: :post do
     %button.btn.btn-outline-success.my-2.my-sm-0{ type: 'submit' } ゲームを開始
+
   %button.navbar-toggler{ type: 'button', data:{ toggle: 'collapse', target: '#navbarSupportedContent' }, aria: { controls: 'navbarSupportedContent', expanded: 'false', label: 'Toggle navigation' } }
     %span.navbar-toggler-icon
 
