--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,34 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
   %body
-    = yield
+
+    %nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
+      = link_to 'NJMJ', root_path, { class: 'navbar-brand' }
+
+      #navbarSupportedContent.collapse.navbar-collapse
+        %ul.navbar-nav.mr-auto
+          %li.nav-item.active
+            %a.nav-link{ href: '#' }
+              Home
+              %span.sr-only (current)
+          %li.nav-item
+            %a.nav-link{ href: '#' } Link
+          %li.nav-item
+            %a.nav-link.disabled{ href: '#' } Disabled
+          %li.nav-item.dropdown
+            %a#dropdown01.nav-link.dropdown-toggle{ href: 'http://example.com', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' } } Dropdown
+            .dropdown-menu{ aria: { labelledby: 'dropdown01' } }
+              %a.dropdown-item{ href: '#' } Action
+              %a.dropdown-item{ href: '#' } Another action
+              %a.dropdown-item{ href: '#' } Something else here
+
+      = form_tag players_path, method: :post do
+        %button.btn.btn-outline-success.my-2.my-sm-0{ type: 'submit' } ゲームを開始
+
+      %button.navbar-toggler{ type: 'button', data:{ toggle: 'collapse', target: '#navbarSupportedContent' }, aria: { controls: 'navbarSupportedContent', expanded: 'false', label: 'Toggle navigation' } }
+        %span.navbar-toggler-icon
+
+    %main.container{ role: 'main' }
+      = yield
