--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -8,3 +8,9 @@
     %main.col-sm-9.ml-sm-auto.col-md-10.pt-3{ role: 'main' }
       %p こんにちは、#{@player.name}
       %p 他のプレイヤーを探しています
+      #messages
+        = render @messages
+      %form
+        %label Say something:
+        %br
+        %input{ type: 'text', data: { behavior: 'room_speaker' } }
