add player-name to message

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,15 @@
 body {
   padding-top: 5rem;
 }
+
+.message {
+  border-top: 1px solid #e8e8e8;
+}
+.message-user {
+  width: 10rem;
+  float: left;
+}
+
+.message-content {
+
+}
